--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.12.1",
-    "@mantine/hooks": "7.12.1",
+    "@mantine/charts": "^7.12.2",
+    "@mantine/core": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.10",
@@ -52,8 +54,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^24.1.0",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "1.17.0",
+    "postcss": "^8.4.43",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.2",
     "prop-types": "^15.8.1",
